agregando un comentario al archivo

--- a/caninos.html
+++ b/caninos.html
@@ -38,7 +38,7 @@
           </div>
         </div>
       </div>
-        
+        <!--Esto es un comentario-->
     
         <div class="nombres">
           <p> <b>Nombre: </b>Mateo</p>
